--- a/style.css
+++ b/style.css
@@ -1,50 +1,62 @@
-.container {
+.FrameAll {
+  border: 1px dashed rgb(42, 30, 30);
+  padding: 10px;
+}
+.header {
   display: flex;
-  background-color: rgb(149, 221, 224);
+  border: 1px solid black;
+  height: 70px;
+  align-items: center;
+}
+.main {
+  display: flex;
+  border: 1px solid black;
   height: 300px;
-  width: 600;
-
-  /* flex-direction: column; */
-  /*|-> sap xep theo chieu doc */
-  /* flex-direction: row; */
-  /*|-> sap xep theo chieu ngang */
-  /* flex-direction: row-reverse; */
-  /* |-> xep cac item tu phai sang trai  */
-  /* flex-direction: column-reverse; */
-  /* |-> Sap xep cac item tu duoi len tren  */
-  /* flex-wrap: wrap; */
-  /* |-> Xuong dong  >< flex-reverse tuong tu nhu tren */
-  /* justify-content: flex-start; */
-  /* |-> Can chinh Item mac dinh  */
-  /* justify-content: flex-end; */
-  /* |-> Can chinh Item sang ben phai  */
-  /* justify-content: center;
-  |-> Can chinh Item vao giua  */
-  /* justify-content: space-between; */
-  /* |-> Can chinh Item ma o giua co khoang cach deu nhau  */
-  /* justify-content: space-around; */
-  /* |-> Can chinh Item trc no deu cos khoang cach   */
-  /* justify-content: space-evenly; */
-  /* |-> Can chinh Item trc no deu co khaong cach DEU NHAU   */
 }
-.item {
-  width: 100px;
+.sidebar {
+  align-items: center;
+  border: 1px solid black;
+  width: 30%;
+  display: flex;
+  justify-content: center;
+}
+.content {
+  align-items: center;
+  border: 1px solid black;
+  display: flex;
+  justify-content: center;
+  width: 70%;
+}
+.footer {
+  align-items: center;
+  border: 1px solid black;
+  display: flex;
+  justify-content: center;
+  height: 80px;
+}
+.logo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 70px;
   height: 50px;
+  /* border: 1px solid black; */
 }
-.red {
-  flex-basis: 200px;
-  background-color: red;
+.avatar {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 80px;
+  height: 60px;
+  border-radius: 50% solid black;
+  margin: 20px;
 }
-.green {
-  background-color: green;
+.menu {
+  align-items: center;
+  /* border: 1px solid black; */
+  height: 50px;
   flex-grow: 1;
+  display: flex;
+  justify-content: center;
+  justify-content: space-around;
 }
-.blue {
-  background-color: blue;
-  flex-grow: 1;
-}
-.yellow {
-  background-color: yellow;
-}
-/* flex-grow + number chiem them ..number khoang trong con thua  
-cai nay sinh ra de vd item 1va2 cho 1px item2 cho ..number px con la*/
