--- a/style.css
+++ b/style.css
@@ -1,62 +1,3 @@
-.FrameAll {
-  border: 1px dashed rgb(42, 30, 30);
-  padding: 10px;
-}
-.header {
-  display: flex;
-  border: 1px solid black;
-  height: 70px;
-  align-items: center;
-}
-.main {
-  display: flex;
-  border: 1px solid black;
-  height: 300px;
-}
-.sidebar {
-  align-items: center;
-  border: 1px solid black;
-  width: 30%;
-  display: flex;
-  justify-content: center;
-}
-.content {
-  align-items: center;
-  border: 1px solid black;
-  display: flex;
-  justify-content: center;
-  width: 70%;
-}
-.footer {
-  align-items: center;
-  border: 1px solid black;
-  display: flex;
-  justify-content: center;
-  height: 80px;
-}
-.logo {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 70px;
-  height: 50px;
-  /* border: 1px solid black; */
-}
-.avatar {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 80px;
-  height: 60px;
-  border-radius: 50% solid black;
-  margin: 20px;
-}
-.menu {
-  align-items: center;
-  /* border: 1px solid black; */
-  height: 50px;
-  flex-grow: 1;
-  display: flex;
-  justify-content: center;
-  justify-content: space-around;
+body {
+  background-color: rgb(162, 214, 237);
 }
